# FFaudioConverter

./: .gitignore  CMakeLists.txt  FFaudioConverter.pro  README.md  build_clang.cmd  build_linux.sh  build_win32.bat  build_xcode.cmd  com.github.REDDDev.FFaudioConverter.appdata.xml  com.github.REDDDev.FFaudioConverter.desktop  com.github.REDDev.FFaudioConverter.appdata.xml  com.github.REDDev.FFaudioConverter.desktop  ffaudioconverter.qrc  release.sh  update-translations.sh
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  dirscan.cpp  dirscan.h  ffmpegtask.cpp  ffmpegtask.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  translator.cpp  translator.h  util.cpp  util.h
